--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/vars";
+@import "./utils/reset";
+@import "./utils/mixins";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/top-bar.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/page.scss";
+@import "./blocks/move-free.scss";
+@import "./blocks/recommended.scss";
+@import "./blocks/categories.scss";
